# Paperfetch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_breakage.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  faq.md  roadmap.md  schema.md
docs/zh/: README.md  architecture.md  faq.md  getting-started.md
examples/: papers.txt
src/paperfetch/: __init__.py  cli.py  html_utils.py  http.py  merge.py  models.py  normalize.py  service.py
src/paperfetch/demo/: __init__.py  app.py
src/paperfetch/providers/: __init__.py  alphaxiv.py  arxiv.py  base.py
tests/: test_alphaxiv_provider.py  test_arxiv_provider.py  test_cli.py  test_demo.py  test_merge.py  test_normalize.py  test_service.py
tests/fixtures/: alphaxiv_2301.12345.html  arxiv_feed.xml
